fix the nav bar from overlapping  it

--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -7,6 +7,7 @@
   width: 97.3vw;
   padding: 10px;
   border: 2px solid white;
+  z-index: 99;
 }
 
 .nav{
